force-app/main/default/objects/DebugInfo__c/DebugInfo__c.object-meta.xml
<CustomObject>
    <description>Storage for Debug logs</description>
    <label>DebugInfo</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>DebugInfo Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DebugInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>