force-app/main/default/objects/DebugInfo__c/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <description>Procedure that created the entry</description>
    <label>Caller</label>
    <length>64</length>
    <type>Text</type>
</CustomField>