force-app/main/default/objects/DebugInfo__c/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>timestamp this entry was created</description>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>