force-app/main/default/objects/DebugInfo__c/fields/DebugData__c.field-meta.xml
<CustomField>
    <fullName>DebugData__c</fullName>
    <label>DebugData</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>