force-app/main/default/objects/DebugInfo__c/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>