force-app/main/default/objects/DebugInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Caller__c</columns>
    <columns>Created_Time__c</columns>
    <columns>EndPoint__c</columns>
    <columns>DebugData__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>